opam-version: "1.2"
name: "ppx_pgsql"
version: "0.4"
author: "Bruno Deferrari <utizoc@gmail.com>"
maintainer: "Bruno Deferrari <utizoc@gmail.com>"
homepage: "https://github.com/tizoc/ppx_pgsql"
license: "BSD-3"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
    "pgocaml"
    "ppxlib"
    "dune"                    {build & >= "1.0"}
    "ocamlfind"               {build}
    "ocaml-migrate-parsetree" {>= "0.4"}
]
tags: ["postgresql" "pgocaml" "ppx"]
available: [
    ocaml-version >= "4.03"
]
dev-repo: "https://github.com/tizoc/ppx_pgsql.git"
bug-reports: "https://github.com/tizoc/ppx_pgsql/issues"
