(library
 (name ppx_pgsql)
 (public_name ppx_pgsql)
 (synopsis "PG'OCaml PPX syntax extension")
 (modules ppx_pgsql)
 (kind ppx_rewriter)
 (flags (:standard -safe-string))
 (libraries pgocaml ocaml-migrate-parsetree)
 (ppx_runtime_libraries pgocaml ppx_pgsql.runtime)
 (preprocess (pps ppx_tools_versioned.metaquot_408)))
